src/components/Navbar.css
h1 {
  font-family: 'Nunito Sans', sans-serif;
  font-weight: 800;
  font-size: x-large;
}

p {
  margin-top: 10px;
}

.navbar {
    height: 80px;
    width:100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 1.2rem;
    position: fixed;
    top: 0%;
    z-index: 1;
  }
  
  .navbar-logo {
    font-family: 'Nunito Sans', sans-serif;
    font-weight: 800;
    color: #000;
    cursor: pointer;
    text-decoration: none;
    font-size: 2rem;
    display: block;
  }
  
  .info-menu {
    opacity: 0;
    position: absolute;
    max-width: 600px;
    top: 80px;
    visibility: hidden;
    transition: all 0.5s ease;
  }

  .info-menu.active {
    opacity: 1;
    z-index: 1;
    visibility: visible;
    padding: 40px;
    background: #fff;
    border-radius: 15px;
    transition: all 0.5s ease;
    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.274);
    
  };
  
  .info-item {
    display: flex;
    align-items: center;
    height: 80px;
  }
  
  .fa-solid{
  font-size: x-large;  
  }

  .fa-info-circle {
    color: rgba(0, 0, 0, 0.5);
  }
  

  .menu-icon {
    display: flex;
    position: fixed;
    right: 20px;
    font-size: 1.8rem;
    cursor: pointer;
  }
  
  @media screen and (max-width: 960px) {
    .NavbarItems {
      position: relative;
    }
  
    .fa-times {
      color: rgba(0, 0, 0, 0.473);
      font-size: 2rem;
    }
  
  }
  

